pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: toures-reserva-servicio
spec:
  containers:
  - name: toures-reserva-servicio
    image: alejoab12/reserva
