mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: toures-usuario-mysql-service
  labels:
    app: toures-usuario-mysql
spec:
  ports:
    - port: 3306
  selector:
    app: toures-usuario-mysql
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: toures-usuario-mysql-deployment
  labels:
    app: toures-usuario-mysql
spec:
  selector:
    matchLabels:
      app: toures-usuario-mysql
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: toures-usuario-mysql
        tier: mysql
    spec:
      containers:
      - image: mysql
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: toures-usuario-mysql-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
