ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: toures-reserva-servicio-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: toures-reserva-service
          servicePort: 9080
